--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "accesscontrol": "^2.2.1",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
